--- a/new-to-sdr.html
+++ b/new-to-sdr.html
@@ -27,9 +27,11 @@
       <div class="three columns sidebar">
         <nav class="menu">
   <h1 class="title"><a href=".">LuaRadio</a></h1>
-  <p align="center">
-      <a href="https://github.com/vsergeev/luaradio"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><a href="https://github.com/vsergeev/luaradio/blob/master/CHANGELOG.md"><code class="version">v0.7.0</code></a>
-  </p>
+  <div class="links">
+      <a href="https://github.com/vsergeev/luaradio/blob/master/CHANGELOG.md"><i class="fa fa-link fa-fw" aria-hidden="true"></i> <code class="version">v0.8.0</code></a><br />
+      <a href="https://github.com/vsergeev/luaradio"><i class="fa fa-github fa-fw" aria-hidden="true"></i> GitHub</a><br />
+      <a href="https://groups.io/g/luaradio"><i class="fa fa-envelope fa-fw" aria-hidden="true"></i> Mailing List</a>
+  </div>
   <div class="toc">
     <ul>
         <li><a href="./new-to-sdr.html">New to SDR?</a></li>
@@ -45,7 +47,6 @@
             </ul>
         </li>
         <li><a href="./docs/reference-manual.html">Reference Manual</a></li>
-        <li><a href="https://groups.io/g/luaradio">Mailing List</a></li>
         <li><a href="https://github.com/vsergeev/luaradio/wiki#project-roadmap">Project Roadmap</a></li>
         <li><a href="./examples/">Examples</a>
             <ul>
@@ -73,9 +74,11 @@
         <nav class="scroll-toc">
   <div class="toc-header">
     <h1 class="title"><a data-scroll href="#top">LuaRadio</a></h1>
-    <p align="center">
-      <a href="https://github.com/vsergeev/luaradio"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><a href="https://github.com/vsergeev/luaradio"><code class="version">v0.7.0</code></a>
-    </p>
+    <div class="links">
+      <a href="https://github.com/vsergeev/luaradio/blob/master/CHANGELOG.md"><i class="fa fa-link fa-fw" aria-hidden="true"></i> <code class="version">v0.8.0</code></a><br />
+      <a href="https://github.com/vsergeev/luaradio"><i class="fa fa-github fa-fw" aria-hidden="true"></i> GitHub</a><br />
+      <a href="https://groups.io/g/luaradio"><i class="fa fa-envelope fa-fw" aria-hidden="true"></i> Mailing List</a>
+    </div>
   </div>
   <div class="toc">
     <span class="page-title"><a data-scroll href="#top">New to SDR?</a></span>
@@ -1227,9 +1230,9 @@ crowdsourced radio signal identification.</p>
 <li><a href="https://www.reddit.com/r/SignalIdentification"><i class="fa fa-reddit" aria-hidden="true"></i> r/signalidentification</a></li>
 </ul>
 
-<p>The <a href="https://freenode.net/">freenode</a> IRC network has the <code class="highlighter-rouge">##rtlsdr</code> and
-<code class="highlighter-rouge">##hamradio</code> channels, as well as dedicated channels for various SDR hardware
-(e.g. <code class="highlighter-rouge">#airspy</code>, <code class="highlighter-rouge">#bladerf</code>, <code class="highlighter-rouge">#hackrf</code>).</p>
+<p>The <a href="https://freenode.net/">freenode</a> IRC network has the <code class="language-plaintext highlighter-rouge">##rtlsdr</code> and
+<code class="language-plaintext highlighter-rouge">##hamradio</code> channels, as well as dedicated channels for various SDR hardware
+(e.g. <code class="language-plaintext highlighter-rouge">#airspy</code>, <code class="language-plaintext highlighter-rouge">#bladerf</code>, <code class="language-plaintext highlighter-rouge">#hackrf</code>).</p>
 
 <h2 id="comments">Comments</h2>
 
@@ -1240,7 +1243,7 @@ any comments, corrections, or questions.</p>
         <div class="footer">
           <div class="disclaimer">
   <p>
-    © Vanya A. Sergeev, 2016-2019 &mdash; built with <a href="http://jekyllrb.com/">Jekyll</a>, theme based on <a href="https://github.com/swanson/lagom">Lagom</a>
+    © Vanya A. Sergeev, 2016-2020 &mdash; built with <a href="http://jekyllrb.com/">Jekyll</a>, theme based on <a href="https://github.com/swanson/lagom">Lagom</a>
   </p>
 </div>
 
