--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <nav class="menu">
   <h1 class="title"><a href=".">LuaRadio</a></h1>
   <div class="links">
-      <a href="https://github.com/vsergeev/luaradio/blob/master/CHANGELOG.md"><i class="fa fa-link fa-fw" aria-hidden="true"></i> <code class="version">v0.9.1</code></a><br />
+      <a href="https://github.com/vsergeev/luaradio/blob/master/CHANGELOG.md"><i class="fa fa-link fa-fw" aria-hidden="true"></i> <code class="version">v0.10.0</code></a><br />
       <a href="https://github.com/vsergeev/luaradio"><i class="fa fa-github fa-fw" aria-hidden="true"></i> GitHub</a><br />
       <a href="https://groups.io/g/luaradio"><i class="fa fa-envelope fa-fw" aria-hidden="true"></i> Mailing List</a>
   </div>
@@ -44,6 +44,7 @@
                 <li><a href="./docs/architecture.html">Architecture</a></li>
                 <li><a href="./docs/comparison-gnuradio.html">Comparison to GNU Radio</a></li>
                 <li><a href="./docs/supported-hardware.html">Supported Hardware</a></li>
+                <li><a href="./docs/applications.html">Built-in Applications</a></li>
             </ul>
         </li>
         <li><a href="./docs/reference-manual.html">Reference Manual</a></li>
@@ -72,7 +73,7 @@
         <nav class="scroll-toc">
   <h1 class="title"><a data-scroll href="#top">LuaRadio</a></h1>
   <div class="links">
-    <a href="https://github.com/vsergeev/luaradio/blob/master/CHANGELOG.md"><i class="fa fa-link fa-fw" aria-hidden="true"></i> <code class="version">v0.9.1</code></a><br />
+    <a href="https://github.com/vsergeev/luaradio/blob/master/CHANGELOG.md"><i class="fa fa-link fa-fw" aria-hidden="true"></i> <code class="version">v0.10.0</code></a><br />
     <a href="https://github.com/vsergeev/luaradio"><i class="fa fa-github fa-fw" aria-hidden="true"></i> GitHub</a><br />
     <a href="https://groups.io/g/luaradio"><i class="fa fa-envelope fa-fw" aria-hidden="true"></i> Mailing List</a>
   </div>
